--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,5 +1,5 @@
 <h1>Register</h1>
-<form action="/auth/signUp" method="POST">
+<form action="/signup" method="POST">
     <div>
         <label for="name">Name</label>
         <input type="text" id="name" name="name" required>
